# MatchScraper

./: Cargo.toml  README.md  data.csv
.github/workflows/: deploy.yml
src/: main.rs
