[package]
name = "scrap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
reqwest = "0.12.4"
scraper = "0.19.0"
tokio = {version = "1.37.0" , features = ["full"]}
rocket = {version = "0.5.0-rc.2" , features = ["json"]}
rocket_dyn_templates = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.rocket_contrib]
version = "0.4"
features = ["json"]
